branch11  changes merged

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <div style="display: flex; justify-content: center;">
-        <img width="1000" style="margin-top: 100px;"  src="zerodha.png">
+        <img id="image" width="1000" style="margin-top: 100px;"  src="">
     </div>
 
     <div style="display: flex; justify-content: center;">
@@ -73,5 +73,7 @@
         <button  class="btn">check</button>
     </div>
     
+
+    <script src="index.js"></script>
 </body>
 </html>
